[package]
name = "excavate_manufacturate_9000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "0.8.5"
noisy_bevy = "0.4.0"
block-mesh = "0.2.0"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
bevy_rapier3d = "0.22.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
